--- a/app-client/src/index.html
+++ b/app-client/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzeHUKIm_THQrYjZ5DdJN6rvOl78z6d6A&libraries=geometry,places" async defer></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdnghkTIPN_1Fk4J0YRCD6HPtlbS6DiPw&libraries=geometry,places&callback=initAutocomplete" async defer></script>
    <script>
     paypal.Buttons().render('#paypal-button-container');
     // This function displays Smart Payment Buttons on your web page.
