--- a/app-client/src/index.html
+++ b/app-client/src/index.html
@@ -14,7 +14,7 @@
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8K4Rjm4MT4vDpqx3YC2_CSo1fKjnrvKg&libraries=geometry,places" async defer"></script>
    <script>
     paypal.Buttons().render('#paypal-button-container');
-    // This function displays Smart Payment Buttons on your web page.
+    // This function displays Smart Payment Buttons on your web page.-
   </script>
 </head>
 <body>
